--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "ws": "^1.1.0"
-  }
+  },
+  "name": "live-camera",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moyuyc/node-live-camera.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/moyuyc/node-live-camera/issues"
+  },
+  "homepage": "https://github.com/moyuyc/node-live-camera#readme",
+  "description": ""
 }
